# LuxTTS-mlx

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: MLX_PORT_PLAN.md  SESSION_CHECKPOINT.md
luxtts_mlx/: __init__.py  cli.py
tools/: compare_mlx_torch.py  feedback_loop.py  scenario_matrix.py
zipvoice/: luxvoice.py  modeling_utils.py  vocoder_patches.py
zipvoice/mlx/: __init__.py  layers.py  model.py  modeling_utils.py  solver.py  utils.py  vocoder.py  weights.py  zipformer.py
zipvoice/models/: zipvoice.py
zipvoice/models/modules/: scaling.py
zipvoice/tokenizer/: tokenizer.py
