[project]
name = "LuxTTS-mlx"
version = "0.3.0"
description = "LuxTTS MLX port for fast Apple Silicon inference."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cn2an",
  "huggingface-hub",
  "inflect",
  "jieba",
  "lhotse",
  "librosa",
  "linacodec @ git+https://github.com/ysharma3501/LinaCodec.git",
  "mlx",
  "numpy",
  "onnxruntime",
  "pydub",
  "pypinyin",
  "safetensors",
  "setuptools<81",
  "tensorboard",
  "torch",
  "torchaudio",
  "transformers<=4.57.6",
  "vocos",
  "vocos-mlx",
]

[project.scripts]
luxtts-mlx = "luxtts_mlx.cli:main"

[project.optional-dependencies]
train = [
  "einops",
]
phonemize = [
  "piper_phonemize",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.uv]
find-links = ["https://k2-fsa.github.io/icefall/piper_phonemize.html"]

[tool.uv.sources]
linacodec = { git = "https://github.com/ysharma3501/LinaCodec.git" }

[tool.uv.build-backend]
module-root = "" # The root module of the project
